codex-rs/tui/src/status/snapshots/codex_tui__status__tests__status_snapshot_treats_refreshing_empty_limits_as_unavailable.snap
---
source: tui/src/status/tests.rs
expression: sanitized
---
/status

╭──────────────────────────────────────────────────────────────────────────╮
│  >_ Corbanu Terminal (v<V>)                                              │
│                                                                          │
│  Model:            gpt-5.1-codex-max                                     │
│  Model provider:   Ambient                                               │
│  Directory: [[workspace]]                                                │
│  Permissions:      Next turn: Custom (workspace with network access, Ask │
│                    for approval)                                         │
│                    A running turn keeps its captured permissions (not    │
│                    reported here) and granted approvals. Shared services │
│                    keep their existing refresh behavior.                 │
│  Security:         Requested Permissive; effective protection unverified │
│                    (/security)                                           │
│  Agents.md:        <none>                                                │
│                                                                          │
│  Token usage:      750 total  (500 input + 250 output)                   │
│  Context window:   100% left (750 used / 272K)                           │
│  Limits:           not available for this account                        │
╰──────────────────────────────────────────────────────────────────────────╯
