codex-rs/tui/src/status/snapshots/codex_tui__status__tests__status_snapshot_uses_command_backed_provider_account_identity.snap
---
source: tui/src/status/tests.rs
expression: sanitized
---
/status

╭──────────────────────────────────────────────────────────────────────────────────────────╮
│  >_ Corbanu Terminal (v0.0.0)                                                            │
│                                                                                          │
│  Model:                claude-opus-5-plan                                                │
│  Model provider:       Claude Plan                                                       │
│  Directory: [[workspace]]                                                                │
│  Permissions:          Custom (workspace with network access, Ask for approval)          │
│  Security:             Requested Permissive; effective protection unverified (/security) │
│  Agents.md:            <none>                                                            │
│  Account:              Claude Plan account connected                                     │
│  Collaboration mode:   Default                                                           │
│                                                                                          │
│  Token usage:          0 total  (0 input + 0 output)                                     │
│  Limits:               data not available yet                                            │
╰──────────────────────────────────────────────────────────────────────────────────────────╯
